# toasty

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  EXAMPLES.md  HOOKS.md  IMPLEMENTATION_SUMMARY.md  PLAN-install.md  PLAN-update.md  PRESETS.md  README.md  RUST-EVALUATION.md  SESSION_CONTEXT.md  SUMMARY.md  TESTING.md  TEST_PLAN.md  UPDATE-FEATURE-SUMMARY.md  VALIDATION.md  WINGET.md  XML_EXAMPLES.md  install.ps1  install.sh  main.cpp  main_mac.mm  resource.h  resource.rc  toasty.js  toasty.rc
.github/hooks/: toasty.json.example
.github/workflows/: build.yml  ci.yml  test.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
manifests-example/: README.md
manifests-example/s/shanselman/toasty/0.6/: shanselman.toasty.installer.yaml  shanselman.toasty.locale.en-US.yaml  shanselman.toasty.yaml
manifests/s/shanselman/toasty/0.6/: shanselman.toasty.locale.en-US.yaml
tests/: CMakeLists.txt  test-toasty.ps1  test_json_hooks.cpp  test_mac.sh  test_main.cpp  test_presets.cpp  test_utilities.cpp  toasty_utils.h
tests/integration/: README.md  run_integration_tests.ps1
